--- a/roles/net/templates/config.j2
+++ b/roles/net/templates/config.j2
@@ -9,9 +9,9 @@ lo_ipv6={{ wrt_net_lo_ipv6 }}
 nat6_recheck_module={{ wrt_net_nat6_recheck |bool |ternary(1,0) }}
 {% if wrt_net_netfilter_hooks_put_first |bool %}
 nf_put="-I"
-ifs_open="{{ wrt_net_ifs_open |default([],true) |reverse |join(' ') }}"
+ifs_open="{{ wrt_net_ifs_open |d([],true) |reverse |join(' ') }}"
 {% else %}
 nf_put="-A"
-ifs_open="{{ wrt_net_ifs_open |default([],true) |join(' ') }}"
+ifs_open="{{ wrt_net_ifs_open |d([],true) |join(' ') }}"
 {% endif %}
-ifs_nat6="{{ wrt_net_ifs_nat6 |default([],true) |join(' ') }}"
+ifs_nat6="{{ wrt_net_ifs_nat6 |d([],true) |join(' ') }}"
